[package]
name = "ancho"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paprika-api = "1.0.0"
tokio = { version = "1", features = ["full"] }
iced = {version = "0.3.0", features = ["image", "svg"]}
iced_native = "0.4.0"
iced_futures = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"